Move to preview API at java.lang.foreign
The package name may change.