@@ -22,19 +22,19 @@ package org.apache.tomcat.util.openssl;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface CRYPTO_set_mem_functions$f {
 
-    void apply(jdk.incubator.foreign.MemoryAddress x0, jdk.incubator.foreign.MemoryAddress x1, int x2);
+    void apply(java.lang.foreign.MemoryAddress x0, java.lang.foreign.MemoryAddress x1, int x2);
     static NativeSymbol allocate(CRYPTO_set_mem_functions$f fi, ResourceScope scope) {
         return RuntimeHelper.upcallStub(CRYPTO_set_mem_functions$f.class, fi, constants$1.CRYPTO_set_mem_functions$f$FUNC, "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;I)V", scope);
     }
     static CRYPTO_set_mem_functions$f ofAddress(MemoryAddress addr, ResourceScope scope) {
         NativeSymbol symbol = NativeSymbol.ofAddress("CRYPTO_set_mem_functions$f::" + Long.toHexString(addr.toRawLongValue()), addr, scope);
-return (jdk.incubator.foreign.MemoryAddress x0, jdk.incubator.foreign.MemoryAddress x1, int x2) -> {
+return (java.lang.foreign.MemoryAddress x0, java.lang.foreign.MemoryAddress x1, int x2) -> {
             try {
-                constants$1.CRYPTO_set_mem_functions$f$MH.invokeExact(symbol, (jdk.incubator.foreign.Addressable)x0, (jdk.incubator.foreign.Addressable)x1, x2);
+                constants$1.CRYPTO_set_mem_functions$f$MH.invokeExact(symbol, (java.lang.foreign.Addressable)x0, (java.lang.foreign.Addressable)x1, x2);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
