@@ -22,19 +22,19 @@ package org.apache.tomcat.util.openssl;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface SSL_set_info_callback$cb {
 
-    void apply(jdk.incubator.foreign.MemoryAddress x0, int x1, int x2);
+    void apply(java.lang.foreign.MemoryAddress x0, int x1, int x2);
     static NativeSymbol allocate(SSL_set_info_callback$cb fi, ResourceScope scope) {
         return RuntimeHelper.upcallStub(SSL_set_info_callback$cb.class, fi, constants$22.SSL_set_info_callback$cb$FUNC, "(Ljdk/incubator/foreign/MemoryAddress;II)V", scope);
     }
     static SSL_set_info_callback$cb ofAddress(MemoryAddress addr, ResourceScope scope) {
         NativeSymbol symbol = NativeSymbol.ofAddress("SSL_set_info_callback$cb::" + Long.toHexString(addr.toRawLongValue()), addr, scope);
-return (jdk.incubator.foreign.MemoryAddress x0, int x1, int x2) -> {
+return (java.lang.foreign.MemoryAddress x0, int x1, int x2) -> {
             try {
-                constants$22.SSL_set_info_callback$cb$MH.invokeExact(symbol, (jdk.incubator.foreign.Addressable)x0, x1, x2);
+                constants$22.SSL_set_info_callback$cb$MH.invokeExact(symbol, (java.lang.foreign.Addressable)x0, x1, x2);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
